# SchwingerModelPureGauge

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  gauge_conf.h  statistics.h  variables.h
src/: gauge_conf.cpp  hmc.cpp  main.cpp  metropolis.cpp  statistics.cpp  variables.cpp
